--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,8 @@
 @theme {
   --color-primary: #00DDBE;
   --color-secondary: #001446;
+  --color-tertiary: #407FC1;
+  --color-quaternary: #F1F5FA;
 }
 
 
